Fix horizontal scroll, add margin to bestsellers header and fix products

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,6 +8,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
   }
 
   main {
@@ -121,7 +122,7 @@ a.category-badge > span.badge:hover {
 }
 
 .footer-row {
-    padding-top: 30px;
+    padding-top: 10px;
     margin: 0;
 }
 
@@ -129,10 +130,7 @@ a.category-badge > span.badge:hover {
     color: black;
 }
 
-.social-networks{
-    text-align: center;
 
-}
 
 .social-networks li{
     display: inline;
@@ -152,7 +150,7 @@ a.category-badge > span.badge:hover {
 /* -------------------------------- Best Sellers on Homepage */
 .best-sellers-header {
     text-align: center;
-    margin-top: 5px;
+    margin-top: 10px;
     font-size: 2.6rem;
 }
 
